ApexSalesforceTriggerHandlerFramework/force-app/main/default/objects/Job_Application__c/fields/AverageScoreofReview__c.field-meta.xml
<CustomField>
    <fullName>AverageScoreofReview__c</fullName>
    <formula>TotalScoreofReviews__c / TotalNumberofReviews__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Score of Review</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>