ApexSalesforceTriggerHandlerFramework/force-app/main/default/objects/Job_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standby</fullName>
            </value>
            <value>
                <fullName>Considering resume</fullName>
            </value>
            <value>
                <fullName>Contacted to interviewee</fullName>
            </value>
            <value>
                <fullName>Scheduled interview date</fullName>
            </value>
            <value>
                <fullName>Considering interview result</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>