ApexSalesforceTriggerHandlerFramework/force-app/main/default/objects/Job_Application__c/fields/TotalNumberofReviews__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberofReviews__c</fullName>
    <label>Total Number of Reviews</label>
    <summaryForeignKey>Review__c.JobApplication__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>