ApexSalesforceTriggerHandlerFramework/force-app/main/default/objects/Job_Application__c/fields/TotalScoreofReviews__c.field-meta.xml
<CustomField>
    <fullName>TotalScoreofReviews__c</fullName>
    <label>Total Score of Reviews</label>
    <summarizedField>Review__c.Score__c</summarizedField>
    <summaryForeignKey>Review__c.JobApplication__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>